[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "oggm"
dynamic = ["version"]
authors = [
{ name = "OGGM Contributors", email = "fabien.maussion@uibk.ac.at"}
]
description = "Open Global Glacier Model"
readme = "README.rst"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "configobj",
    "matplotlib",
    "netcdf4",
    "numpy",
    "pandas",
    "requests",
    "scipy",
    "shapely",
    "xarray",
]

[project.optional-dependencies]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
full = [
    "oggm[build, docs, tests]",
    "bottleneck",
    "cartopy",
    "dask",
    "geopandas",
    "ipython",
    "joblib",
    "motionless",
    "netcdf4",
    "pillow",
    "progressbar2",
    "pyproj",
    "rasterio",
    "rioxarray",
    "salem",
    "scikit-image",
    "scikit-learn",
    "seaborn",
    "tables",
]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-book-theme",
    "sphinx-intl",
    "sphinx-reredirects",
    "sphinx-togglebutton",
]
tests = [
    "pytest",
    "pytest-mpl",
]

[project.urls]
"Homepage" = "https://oggm.org"
"Bug Tracker" = "https://github.com/OGGM/oggm/issues"
"Documentation" = "https://docs.oggm.org/"

[project.scripts]
oggm_prepro = "oggm.cli.prepro_levels:main"
oggm_benchmark = "oggm.cli.benchmark:main"
oggm_netrc_credentials = "oggm.cli.netrc_credentials:cli"
"pytest.oggm" = "oggm.tests.__main__:main"

[tool.hatch.build.targets.sdist]
packages = ["oggm"]
exclude = [
    "docs",
    ".coverage.*"
]
include = [
    "pytest.ini",
    "oggm/params.cfg",
    "oggm/data/dem_sources.txt",
]
# fallback if include group doesn't work as intended
force-include = {"pytest.ini" = "pytest.ini"} 

[tool.hatch.build.targets.wheel]
packages = ["oggm"]
include = [
    "pytest.ini",
    "oggm/params.cfg",
    "oggm/data/dem_sources.txt",
]
# fallback if include group doesn't work as intended
force-include = {"pytest.ini" = "pytest.ini"} 

[tool.hatch.envs.default]
env-vars-file = ".env"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "oggm/__init__.py"
fallback-version = "1.6.3"
source = "vcs"
# workaround for potential hatchling bug
# pattern = "(?i)^(__version__|VERSION)(?:: *str)? *= *([\\'\"])v?(?P<version>.+?)\\2"

# This section is for uv, but may also used by hatchling when building the package

# local dependency groups for uv
[dependency-groups]
build = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
dev = [
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "tests"},
    {include-group = "full"},
]
docs = [
    "numpydoc>=1.10.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.0.4",
    "sphinx-book-theme>=0.3.2",
    "sphinx-intl>=2.3.2",
    "sphinx-reredirects>=1.1.0",
    "sphinx-togglebutton",
]
full = [
    {include-group = "tests"},
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "dask>=2026.1.2",
    "geopandas>=1.1.2",
    "ipython>=9.10.0",
    "joblib>=1.5.3",
    "motionless>=1.3.3",
    "netcdf4>=1.7.4",
    "pillow>=12.1.0",
    "progressbar2>=4.5.0",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "rioxarray>=0.19.0",
    "salem>=0.3.11",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tables>=3.10.2",
]

tests = [
    "pytest",
    "pytest-mpl",
]

[tool.uv.sources]
pytest-mpl = { git = "https://github.com/OGGM/pytest-mpl" }

[tool.uv.build-backend]
module-root = ""
module-name = "oggm"
