[metadata]
name = oggm
description = Open Global Glacier Model
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://oggm.org
author = OGGM Contributors
author_email = fabien.maussion@uibk.ac.at
license = BSD 3-clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation = https://oggm.readthedocs.io/
    Source = https://github.com/OGGM/oggm
    Tracker = https://github.com/OGGM/oggm/issues

[options]
platforms = any
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires =
    setuptools_scm
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    shapely
    requests
    configobj
    netcdf4
    xarray

[options.packages.find]
exclude = docs

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    oggm_prepro = oggm.cli.prepro_levels:main
    oggm_benchmark = oggm.cli.benchmark:main
    oggm_netrc_credentials = oggm.cli.netrc_credentials:cli
    pytest.oggm = oggm.tests.__main__:main
